--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                         <span class="sub-heading">Hello i am
                         </span>
                         <h1 class="heading">Walter
-                            <span>Melon</span>
+                            <span>GOWTHAM</span>
                         </h1>
-                        <h4 class="heading2">FullStack engineer
+                        <h4 class="heading2">Engineer
                         </h4>
                         <p class="paragraph">
                             It is a long
