--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <div class="col-left">
                         <span class="sub-heading">Hello i am
                         </span>
-                        <h1 class="heading">Walter
-                            <span>GOWTHAM</span>
+                        <h1 class="heading">GOWTHAM
+                            <span>CP</span>
                         </h1>
                         <h4 class="heading2">Engineer
                         </h4>
