--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <li class="active"><a href="#home">home</a></li>
                         <li><a href="#about">about</a></li>
                         <li><a href="#services">services</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#portfolio">Projects</a></li>
                         <li><a href="#contact">contact</a></li>
                         <li class="darkmode-btn d-desktop">
                             <a href="javascript:void(0)">
@@ -70,7 +70,7 @@
                         <h1 class="heading">GOWTHAM
                             <span>CP</span>
                         </h1>
-                        <h4 class="heading2">Engineer
+                        <h4 class="heading2">ENGINEER
                         </h4>
                         <p class="paragraph">
                             It is a long
@@ -159,7 +159,7 @@
                     </div>
                     <div class="about-col-right">
                         <h2 class="about-heading">About me</h2>
-                        <h3 class="about2">Hello, My Name Walter Melon
+                        <h3 class="about2">Hello, My Name GOWTHAM CP
                             FullStack engineer </h3>
                         <p class="about3">It is a long established fact that a reader will be distracted by the
                             readable
