--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="about-col-right">
                         <h2 class="about-heading">About me</h2>
                         <h3 class="about2">Hello, My Name GOWTHAM CP
-                            FullStack engineer </h3>
+                            ENINEER </h3>
                         <p class="about3">It is a long established fact that a reader will be distracted by the
                             readable
                             content of a page
@@ -186,7 +186,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>Figma</h3>
+                            <h3>C</h3>
                             <h4>95%</h4>
                         </div>
                         <div class="progessbar-bg">
@@ -198,8 +198,8 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>Adobe xd</h3>
-                            <h4>85%</h4>
+                            <h3>PYTHON</h3>
+                            <h4>95%</h4>
                         </div>
                         <div class="progessbar-bg">
                             <div class="progressbar-size" style="width:85%">
@@ -210,7 +210,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>Photoshop</h3>
+                            <h3>C++</h3>
                             <h4>90%</h4>
                         </div>
                         <div class="progessbar-bg">
@@ -222,7 +222,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>illustrator</h3>
+                            <h3>AWS</h3>
                             <h4>80%</h4>
                         </div>
                         <div class="progessbar-bg">
@@ -234,7 +234,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>Html</h3>
+                            <h3>MACHINE LEARNING</h3>
                             <h4>96%</h4>
                         </div>
                         <div class="progessbar-bg">
@@ -246,7 +246,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>Css</h3>
+                            <h3>CYBERSECURITY</h3>
                             <h4>96%</h4>
                         </div>
                         <div class="progessbar-bg">
@@ -258,7 +258,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>Javascript</h3>
+                            <h3>GOLANG</h3>
                             <h4>75%</h4>
                         </div>
                         <div class="progessbar-bg">
@@ -270,7 +270,7 @@
                     <!-- item -->
                     <div class="progressbar-item">
                         <div class="progressbar-content d-flex">
-                            <h3>React Js</h3>
+                            <h3>DATA SCIENCE</h3>
                             <h4>70%</h4>
                         </div>
                         <div class="progessbar-bg">
