--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <img src="assets/images/projects-completed.svg" alt="happy clients ">
                         </div>
                         <div>
-                            <h3>120+</h3>
+                            <h3>10+</h3>
                             <p>Projects completed</p>
                         </div>
                     </div>
@@ -143,8 +143,8 @@
                             <img src="assets/images/awards-won.svg" alt="awards ">
                         </div>
                         <div>
-                            <h3>10+</h3>
-                            <p>Awards won</p>
+                            <h3>50+</h3>
+                            <p>certifications</p>
                         </div>
                     </div>
                 </div>
@@ -615,7 +615,7 @@
                     </ul>
                 </div>
                 <div class="footer-bottom d-flex">
-                    <p class="copyright">Ali Mohd © Copyright 2020. All Right Reserved.</p>
+                    </p> NICE TO SEE YOU</p>
                     <div class="footer-social">
                         <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_instagram.svg"
                                 alt="instagram"></a>
