--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                 <div class="footer-bottom d-flex">
                     </p> NICE TO SEE YOU</p>
                     <div class="footer-social">
-                        <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_instagram.svg"
+                        <a href="#" class="footer-social"><img src="portffolio-website/assets/Instagram-Logo.png"
                                 alt="instagram"></a>
                         <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_linkedin.svg"
                                 alt="linkedin"></a>
