--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@
                 <div class="footer-bottom d-flex">
                     </p> NICE TO SEE YOU</p>
                     <div class="footer-social">
-                        <a href="#" class="footer-social"><img src="assets/Instagram-Logo.png"
-                                alt="instagram"></a>
+                        <a href="#" class="footer-social"><img src="assets/ins logo.png"
+                                alt=""></a>
                         <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_linkedin.svg"
                                 alt="linkedin"></a>
                         <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_github.svg"
