--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
                     <div class="footer-social">
                         <a href="#" class="footer-social"><img src="assets/images/ins logo.png"
                                 alt=""></a>
-                        <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_linkedin.svg"
-                                alt="linkedin"></a>
+                        <a href="#" class="footer-social"><img src="assets/images/linkedinlogo.svg"
+                                alt=""></a>
                         <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_github.svg"
                                 alt="github"></a>
                         <a href="#" class="footer-social"><img src="assets/images/instagramlogo.svg"
