--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                         <div class="social">
                             <ul>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/social-icons/feather_instagram.svg" alt="instagram"></a>
+                                            src="assets/images/instagramlogo.svg" alt=""></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/social-icons/feather_linkedin.svg" alt="linkedin"></a>
+                                            src="assets/images/linkedinlogo.svg" alt="linkedin"></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/social-icons/feather_github.svg" alt="github"></a>
+                                            src="assets/images/githublogo.svg" alt="github"></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
                                             src="assets/images/social-icons/feather_dribbble.svg" alt="dribble"></a>
@@ -621,8 +621,8 @@
                                 alt=""></a>
                         <a href="#" class="footer-social"><img src="assets/images/linkedinlogo.svg"
                                 alt=""></a>
-                        <a href="#" class="footer-social"><img src="assets/images/social-icons/feather_github.svg"
-                                alt="github"></a>
+                        <a href="#" class="footer-social"><img src="assets/images/githublogo.svg"
+                                alt=""></a>
                         <a href="#" class="footer-social"><img src="assets/images/instagramlogo.svg"
                                 alt=""></a>
                     </div>
@@ -658,7 +658,7 @@
     </div>
     <!-- Scroll up -->
     <a href="javascript:void(0)" class="scrollup">
-        <img src="assets/images/uparrow.svg" alt="arrow up">
+        <img src="assets/images/scroll-upicon.svg">
     </a>
 </body>
 <script src="assets/js/jquery.min.js"></script>
