--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="darkmode-btn d-mobile"><a href="javascript:void(0)">
                         <img src="assets/images/brightness.svg" alt="brightness" class="bright">
-                        <img src="assets/images/moon.svg" alt="moon" class="dark"> </a></div>
+                        <img src="assets/images/icon-moon-man.svg" alt="moon" class="dark"> </a></div>
             </nav>
         </div>
     </header>
@@ -85,13 +85,13 @@
                         <div class="social">
                             <ul>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/instagramlogo.svg" alt=""></a>
+                                            src="assets/images/icon-instagram.svg" alt=""></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/linkedinlogo.svg" alt="linkedin"></a>
+                                            src="assets/images/icon-linkedin.svg" alt=""></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/githublogo.svg" alt="github"></a>
+                                            src="assets/images/icon-github.svg" alt="github"></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
                                             src="assets/images/social-icons/feather_dribbble.svg" alt="dribble"></a>
@@ -658,7 +658,7 @@
     </div>
     <!-- Scroll up -->
     <a href="javascript:void(0)" class="scrollup">
-        <img src="assets/images/scroll-upicon.svg">
+        <img src="assets/images/up-arrow.png">
     </a>
 </body>
 <script src="assets/js/jquery.min.js"></script>
