--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <li class="darkmode-btn d-desktop">
                             <a href="javascript:void(0)">
                                 <img src="assets/images/brightness.svg" alt="brightness" class="bright">
-                                <img src="assets/images/moon.svg" alt="moon" class="dark"> </a>
+                                <img src="assets/images/icon-moon-man.svg" alt="moon" class="dark"> </a>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +91,7 @@
                                             src="assets/images/icon-linkedin.svg" alt=""></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/icon-github.svg" alt="github"></a>
+                                            src="assets/images/icon-moon-man.svg" alt="github"></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
                                             src="assets/images/social-icons/feather_dribbble.svg" alt="dribble"></a>
