--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
     </div>
     <!-- Scroll up -->
     <a href="javascript:void(0)" class="scrollup">
-        <img src="assets/images/up-arrow.png">
+        <img src="">
     </a>
 </body>
 <script src="assets/js/jquery.min.js"></script>
