--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                                             src="assets/images/icon-linkedin.svg" alt=""></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/githublogo.svg" alt="github"></a>
+                                            src="assets/images/icons-github.png" alt="github"></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/social-icons/feather_dribbble.svg" alt="dribble"></a>
+                                            src="assets/images/icon-gmail.svg" alt=""></a>
                                 </li>
                             </ul>
                         </div>
@@ -617,7 +617,7 @@
                 <div class="footer-bottom d-flex">
                     </p> NICE TO SEE YOU</p>
                     <div class="footer-social">
-                        <a href="#" class="footer-social"><img src="assets/images/ins logo.png"
+                        <a href="#" class="footer-social"><img src="assets/images/icon-facebook.svg"
                                 alt=""></a>
                         <a href="#" class="footer-social"><img src="assets/images/linkedinlogo.svg"
                                 alt=""></a>
