--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                             src="assets/images/icon-linkedin.svg" alt=""></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
-                                            src="assets/images/icons-github.png" alt="github"></a>
+                                            src="assets/images/githublogo.svg" alt="github"></a>
                                 </li>
                                 <li class="social-icon"><a href="#"><img
                                             src="assets/images/icon-gmail.svg" alt=""></a>
@@ -658,7 +658,7 @@
     </div>
     <!-- Scroll up -->
     <a href="javascript:void(0)" class="scrollup">
-        <img src="assets/images/icons-scroll-up.png">
+        <img src="assets/images/iconsff-scrollup.png">
     </a>
 </body>
 <script src="assets/js/jquery.min.js"></script>
