--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="nav d-flex" id="home">
                 <div class="logo">
                     <a href="#">
-                        <img src="assets/images/logo.svg" alt="logo" class="logo-main">
+                        <img src="assets/images/LOGOSIGN.png" alt="logo" class="logo-main">
                         <img src="assets/images/logo-white.svg" alt="logo" class="logo-dark">
 
                     </a>
