--- a/index.html
+++ b/index.html
@@ -291,14 +291,12 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
-                            <img src="assets/images/services/ui-design.svg" alt="ui design">
+                            <img src="" alt="ui design">
                         </div>
                         <h3>UI/UX design</h3>
-                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                            Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker
-                            including
-                            versions of Lorem Ipsum.</p>
+                        <p>I am CO-FOUNDER and CEO of our own startup SCULPCHIZ where we are designing the ui/ux of your
+                        website or mobile application.
+                        "You tap on a mobile screen and scroll through a website and something happens, I design what happens."</p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
