--- a/index.html
+++ b/index.html
@@ -301,21 +301,20 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color2 d-flex">
-                            <img src="assets/images/services/web-dev.svg" alt="web dev">
+                            <img src="assets/images/services/web-dev.svg" alt="clean code">
                         </div>
-                        <h3>Web development</h3>
-                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                            Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker
-                            including
-                            versions of Lorem Ipsum.</p>
+                        <h3>CLEAN CODE</h3>
+                        <p>I will review your scripts, and give tips about clean code.
+                        “Code that communicates its purpose is very important. I often refactor just when I’m reading some code.
+                         That way, as I gain understanding about the program, 
+                         I embed that understanding into the code for later so I don’t forget what I learned.”</p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color3 d-flex">
-                            <img src="assets/images/services/illustration.svg" alt="illustration">
+                            <img src="assets/images/services/illustration.svg" alt="great support">
                         </div>
-                        <h3>illustration</h3>
+                        <h3>GREAT SUPPORT</h3>
                         <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem
                             Ipsum
                             passages, and more recently with desktop publishing software like Aldus PageMaker
