--- a/index.html
+++ b/index.html
@@ -315,11 +315,9 @@
                             <img src="assets/images/services/illustration.svg" alt="great support">
                         </div>
                         <h3>GREAT SUPPORT</h3>
-                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                            Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker
-                            including
-                            versions of Lorem Ipsum.</p>
+                        <p>I will help you to find internships,free courses and free certificates.
+                        Let's Talk!!
+                        My inbox is always open!</p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
