--- a/index.html
+++ b/index.html
@@ -317,7 +317,10 @@
                         <h3>GREAT SUPPORT</h3>
                         <p>I will help you to find internships,free courses and free certificates.
                         Let's Talk!!
-                        My inbox is always open!</p>
+                        My inbox is always open!
+                        “I want to be around people who do things. 
+                         I don’t want to be around people anymore who judge or talk about what people do.
+                         I want to be around people who dream and support and do things.”</p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
