--- a/index.html
+++ b/index.html
@@ -325,14 +325,12 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color4 d-flex">
-                            <img src="assets/images/services/seo.svg" alt="SEO ">
+                            <img src="assets/images/services/seo.svg" alt=" FRONT END DEVELOPMENT ">
                         </div>
-                        <h3>SEO </h3>
-                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                            Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker
-                            including
-                            versions of Lorem Ipsum.</p>
+                        <h3>FRONT END DEVELOPMENT</h3>
+                        <p>I will successfully convert your great idea into reality 
+                            and will understand your idea or the dynamics associated with it as you do.
+                            I will do static Front End work for your website, whether it's a landing page, forms, or even themes. </p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
