--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
                         <h3>FRONT END DEVELOPMENT</h3>
                         <p>I will successfully convert your great idea into reality 
                             and will understand your idea or the dynamics associated with it as you do.
-                            I will do static Front End work for your website, whether it's a landing page, forms, or even themes. </p>
+                            I will do static Front End work for your website, whether it's a landing page, forms, or even themes.
+                            "Websites promote you 24/7: No employee will do that.”</p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
