--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color2 d-flex">
-                            <img src="assets/images/services/web-dev.svg" alt="clean code">
+                            <img src="assets/images/icon-laptop-coding.png" alt="">
                         </div>
                         <h3>CLEAN CODE</h3>
                         <p>I will review your scripts, and give tips about clean code.
@@ -325,7 +325,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color4 d-flex">
-                            <img src="assets/images/services/seo.svg" alt=" FRONT END DEVELOPMENT ">
+                            <img src="assets/images/icon-web-design.png" alt="">
                         </div>
                         <h3>FRONT END DEVELOPMENT</h3>
                         <p>I will successfully convert your great idea into reality 
