--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             like
                             readable English. </p>
                         <div class="about-btn-blk">
-                            <a href="#" class="btn btn-blue about-btn">Download CV</a>
+                            <a href="#" class="btn btn-blue about-btn">Download RESUME</a>
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
-                            <img src="assets/images/ScLogo.ai" alt="ui design">
+                            <img src="assets/images/icon-ui-ux-design.gif" alt="">
                         </div>
                         <h3>UI/UX design</h3>
                         <p>I am CO-FOUNDER and CEO of our own startup SCULPCHIZ where we are designing the ui/ux of your
@@ -312,7 +312,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color3 d-flex">
-                            <img src="assets/images/services/illustration.svg" alt="great support">
+                            <img src="assets/images/icons-online-support.png" alt="great support">
                         </div>
                         <h3>GREAT SUPPORT</h3>
                         <p>I will help you to find internships,free courses and free certificates.
