--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
-                            <img src="assets/images/icon-ui-ux-design.gif" alt="">
+                            <img src="assets/images/iconff-ui.gif" alt="">
                         </div>
                         <h3>UI/UX design</h3>
                         <p>I am CO-FOUNDER and CEO of our own startup SCULPCHIZ where we are designing the ui/ux of your
