--- a/index.html
+++ b/index.html
@@ -73,11 +73,8 @@
                         <h4 class="heading2">ENGINEER
                         </h4>
                         <p class="paragraph">
-                            It is a long
-                            established fact that a reader will be
-                            distracted by the readable content of a page
-                            when
-                            looking at its layout. </p>
+                        I’m a junior developer from INDIA.I'm an open-source enthusiast, a learner , graphics designer, freelancer and developer.
+                        I'm deeply passionate about development , cybersecurity and innovations.  </p>
                         <div class="btn-blk">
                             <a href="#contact" class="btn btn-blue">Let’s Talk</a>
                             <a href="#portfolio" class="btn btn-black">View projects</a>
