--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <h4 class="heading2">ENGINEER
                         </h4>
                         <p class="paragraph">
-                        I’m a junior developer from INDIA.I'm an open-source enthusiast, a learner , graphics designer, freelancer and developer.
+                        I’m a junior developer from INDIA. I'm an open-source enthusiast , learner , graphics designer , freelancer and developer.
                         I'm deeply passionate about development , cybersecurity and innovations.  </p>
                         <div class="btn-blk">
                             <a href="#contact" class="btn btn-blue">Let’s Talk</a>
