--- a/index.html
+++ b/index.html
@@ -158,15 +158,13 @@
                         <h2 class="about-heading">About me</h2>
                         <h3 class="about2">Hello, My Name GOWTHAM CP
                             ENINEER </h3>
-                        <p class="about3">It is a long established fact that a reader will be distracted by the
-                            readable
-                            content of a page
-                            when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
-                            normal
-                            distribution of letters, as opposed to using 'Content here, content here', making it
-                            look
-                            like
-                            readable English. </p>
+                        <p class="about3">Hi there! I'm an aspiring developer who loves finding patterns and connecting dots: 
+be it ideas from different industries, people from different backgrounds and teams, or applications from different industries. 
+Finding creative solutions to problems is something I have always enjoyed. 
+As a kid I loved tinkering with things that were broken, figuring out how they worked, and fixing them again.
+When I finished high school, I knew exactly what I wanted my career to be.
+I am pursuing my Bachelor's Degree in ARTIFICIAL INTELLIGENCE AND DATA SCIENCE from PSNA COLLEGE OF ENGINEEERING OF TECHNOLOGY, where I am learning how to apply critical thinking and problem-solving strategies to today’s complex problems.
+If you are interested in contacting me in regards to a position with your company, please email me at cpgowtham7@gmail.com, or feel free to connect with me on LinkedIn. </p>
                         <div class="about-btn-blk">
                             <a href="#" class="btn btn-blue about-btn">Download RESUME</a>
                         </div>
