--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                             <img src="assets/images/happy-clients.svg" alt="happy clients ">
                         </div>
                         <div>
-                            <h3>73</h3>
-                            <p>happy clients</p>
+                            <h3>15+</h3>
+                            <p>Internships Completed</p>
                         </div>
                     </div>
                     <div class="feature-item d-flex">
@@ -132,7 +132,7 @@
                         </div>
                         <div>
                             <h3>10+</h3>
-                            <p>Projects completed</p>
+                            <p>Projects Completed</p>
                         </div>
                     </div>
                     <div class="feature-item d-flex">
@@ -141,7 +141,7 @@
                         </div>
                         <div>
                             <h3>50+</h3>
-                            <p>certifications</p>
+                            <p>Certifications</p>
                         </div>
                     </div>
                 </div>
