--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="feature-item d-flex">
                         <div class="icon d-flex color2">
-                            <img src="assets/images/happy-clients.svg" alt="happy clients ">
+                            <img src="assets/images/icons-internship.png" alt=" ">
                         </div>
                         <div>
                             <h3>15+</h3>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="feature-item d-flex">
                         <div class="icon d-flex color3">
-                            <img src="assets/images/projects-completed.svg" alt="happy clients ">
+                            <img src="assets/images/icons-projects.png" alt=" ">
                         </div>
                         <div>
                             <h3>10+</h3>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="feature-item d-flex">
                         <div class="icon d-flex  color4">
-                            <img src="assets/images/awards-won.svg" alt="awards ">
+                            <img src="assets/images/icons-certificates.png" alt=" ">
                         </div>
                         <div>
                             <h3>50+</h3>
