--- a/index.html
+++ b/index.html
@@ -588,7 +588,9 @@
                             <textarea name="" id="" required></textarea>
                         </div>
                         <div class="submit-btn form-item">
-                            <button type="submit" value="submit" class="btn btn-blue"> Send message</button>
+                            <button type="submit" value="submit" class="btn btn-blue"> Send message</button 
+                                <a href="cpgowtham7@gmail.com">Visit W3Schools.com!</a>
+                     >
 
                         </div>
                 </form>
