--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                         </div>
                         <div class="submit-btn form-item">
                             <button type="submit" value="submit" class="btn btn-blue"> Send message</button 
-                                <a href="cpgowtham7@gmail.com">Visit W3Schools.com!</a>
+                                <a href="https://mail.google.com/">Visit W3Schools.com!</a>
                      >
 
                         </div>
@@ -649,7 +649,7 @@
                 </ul>
 
                 <div class="close-btn">
-                    <a href="javascript:void(0)" class="btn btn-blue close-modal">Close Modal</a>
+                    <a href="javascript:void(0)" class="btn btn-blue close-modal">Close Project</a>
                 </div>
             </div>
         </div>
