--- a/index.html
+++ b/index.html
@@ -588,10 +588,7 @@
                             <textarea name="" id="" required></textarea>
                         </div>
                         <div class="submit-btn form-item">
-                            <button type="submit" value="submit" class="btn btn-blue"> Send message</button 
-                                <a href="https://mail.google.com/">Visit W3Schools.com!</a>
-                     >
-
+                            <button type="submit" value="submit" class="btn btn-blue"> Send message</button>
                         </div>
                 </form>
             </div>
