--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
         <section class="contact ptb-100" id="contact">
             <div class="container">
                 <h2>Contact me</h2>
-                <form id="basic-form" action="" method="post">
+                <form id="basic-form" action="contact.php">
                     <div class="contact-inner d-flex">
                         <div class="input-block form-item">
                             <label for="">First name</label>
