--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="logo">
                     <a href="#">
                         <img src="" alt="logo" class="logo-main">
-                        <img src="assets/images/logo-white.svg" alt="logo" class="logo-dark">
+                        <img src="assets/images/cp logo.png" alt="logo" class="logo-dark">
 
                     </a>
                 </div>
