--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <nav class="nav d-flex" id="home">
                 <div class="logo">
                     <a href="#">
-                        <img src="" alt="logo" class="logo-main">
-                        <img src="assets/images/cp logo.png" alt="logo" class="logo-dark">
+                        <img src="assets/images/gowtham-logo.png" alt="logo" class="logo-main">
+                        <img src="assets/images/gowtham-logo.png" alt="logo" class="logo-dark">
 
                     </a>
                 </div>
