--- a/index.html
+++ b/index.html
@@ -282,20 +282,18 @@
             </div>
         </section>
 
-        <!-- Services -->
+        <!-- Communities -->
         <section class="services ptb-100" id="services">
             <div class="container">
-                <h2>What i offer</h2>
+                <h2>Positions of Responsibility</h2>
                 <div class="services-inner d-grid">
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
                             <img src="assets/images/iconff-ui.gif" alt="">
                         </div>
-                        <h3>UI/UX design</h3>
-                        <p>I am CO-FOUNDER and CEO of our own startup SCULPCHIZ where we are designing the ui/ux of your
-                        website or mobile application.
-                        "You tap on a mobile screen and scroll through a website and something happens, I design what happens."</p>
+                        <h3>Azure Developer Community</h3>
+                        <p></p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
