--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                 <div class="features-inner d-grid">
                     <div class="feature-item d-flex">
                         <div class="icon d-flex color1">
-                            <img src="assets/images/experience.svg" alt="experience">
+                            <img src="assets/images/gummy-coding.svg" alt="experience">
                         </div>
                         <div>
-                            <h3>5+</h3>
-                            <p>Experience</p>
+                            <h3>4+</h3>
+                            <p>Developer Community</p>
                         </div>
                     </div>
                     <div class="feature-item d-flex">
@@ -157,7 +157,7 @@
                     <div class="about-col-right">
                         <h2 class="about-heading">About me</h2>
                         <h3 class="about2">Hello, My Name GOWTHAM CP
-                            ENINEER </h3>
+                            ENGINEER </h3>
                         <p class="about3">Hi there! I'm an aspiring developer who loves finding patterns and connecting dots:
                             be it ideas from different industries, people from different backgrounds and teams,
                             or applications from different industries. Finding creative solutions to problems is something
@@ -282,17 +282,17 @@
             </div>
         </section>
 
-        <!-- Communities -->
+        <!-- Services -->
         <section class="services ptb-100" id="services">
             <div class="container">
-                <h2>Positions of Responsibility</h2>
+                <h2>Services</h2>
                 <div class="services-inner d-grid">
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color1 d-flex">
                             <img src="assets/images/iconff-ui.gif" alt="">
                         </div>
-                        <h3>Azure Developer Community</h3>
+                        <h3></h3>
                         <p></p>
                     </div>
                     <!-- item -->
@@ -336,11 +336,8 @@
                             <img src="assets/images/services/content-writing.svg" alt="Content writing ">
                         </div>
                         <h3>Content writing </h3>
-                        <p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                            Ipsum
-                            passages, and more recently with desktop publishing software like Aldus PageMaker
-                            including
-                            versions of Lorem Ipsum.</p>
+                        <p> I enjoy writing on a variety of topics. 
+                            “Content is nothing but showing your creativity through words”</p>
                     </div>
                     <!-- item -->
                     <div class="services-block">
@@ -363,7 +360,7 @@
                 <div class="cta-inner d-flex">
                     <div class="cta-content">
                         <h3>Have a project in mind?</h3>
-                        <p>Get FREE estimate! is a long established fact that a reader will be distracted </p>
+                        <p>Let's Talk!</p>
                     </div>
                     <a href="#contact" class="btn btn-default ">Contact now</a>
                 </div>
@@ -377,12 +374,12 @@
                     <!-- item -->
                     <div class="project-item">
                         <div class="project-image">
-                            <img src="assets/images/projects/1.jpg" alt="project image">
+                            <img src="assets/images/to-do list.svg" alt="project image">
                         </div>
                         <div class="project-content">
-                            <h3>Landing page</h3>
+                            <h3>Todo-List</h3>
                             <div class="project-view d-flex">
-                                <span>UI Design</span>
+                                <span>Golang</span>
                                 <a href="javascript:void(0)" class="btn-view">View </a>
                             </div>
                         </div>
