--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="features-inner d-grid">
                     <div class="feature-item d-flex">
                         <div class="icon d-flex color1">
-                            <img src="assets/images/gummy-coding.svg" alt="experience">
+                            <img src="assets/images/developer-icon.png" alt="experience">
                         </div>
                         <div>
                             <h3>4+</h3>
@@ -333,7 +333,7 @@
                     <!-- item -->
                     <div class="services-block">
                         <div class="service-icon color5 d-flex">
-                            <img src="assets/images/services/content-writing.svg" alt="Content writing ">
+                            <img src="assets/images/developer-icon.png" alt="Content writing ">
                         </div>
                         <h3>Content writing </h3>
                         <p> I enjoy writing on a variety of topics. 
