--- a/index.html
+++ b/index.html
@@ -459,18 +459,13 @@
         <section class="testmonial">
             <div class="container">
                 <div class="testmonial-inner">
-                    <h2>Happy Clients </h2>
+                    <h2>Communities that I have Involved</h2>
                     <div class="testmonial-slider owl-carousel owl-theme">
                         <!-- item -->
                         <div class="testmonial-item">
-                            <h3>Ui design project</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum is
-                                simply
-                                dummy text of the printing and typesetting industry. simply dummy text of the
-                                printing
-                                and
-                                typesetting industry. </p>
+                            <h3>Google Developer Studets Club Lead</h3>
+                            <p>Build a Developer student community to help students to learn, 
+                            contribute more towards the community and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
                                 <img src="assets/images/client-1.png" alt="client thumb">
                                 <h4>Bob Frapples
